--- a/MovieScribe/MovieScribe.csproj
+++ b/MovieScribe/MovieScribe.csproj
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Select.Pdf" Version="22.2.0" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
     <PackageReference Include="X.PagedList.Mvc.Core" Version="8.4.7" />
   </ItemGroup>
 
